tools/tests/errors/surf_arity_12.experr
get() expected at least 2 argument(s)
